#
# Master Makefile
#

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	src \
	manpages \
	utest

EXTRA_DIST = \
	CHANGELOG \
	CONTRIBUTORS \
	DONATIONS \
	LICENSE \
	README \
	UPGRADING \
	android/build-script-android \
	android/burp_ca \
	android/README \
	configs \
	debian \
	docs \
	freebsd \
	rhel \
	opensuse \
	src/protocol1/backup_phases.txt \
	src/protocol1/readwrite.txt


# TODO: Turn these into automake projects
#       Just include them in the dist for now

EXTRA_DIST+= \
	src/win32 \
	test \
	utest
